# resume-parser

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  render.yaml  requirements.txt  vercel.json
api/: index.py  requirements.txt
backend/: AUTH_README.md  ENV.template  README.md  alembic.ini  example_usage.py  pyproject.toml  railway.json  render.yaml  requirements.txt  setup_auth_db.py  test_resume_parser.py  test_user_cli.ps1
backend/alembic/: env.py
backend/alembic/versions/: 50b669d70432_create_user_table.py  ecfb2a6a40e4_create_user_table.py
backend/data/: strong_bullets.json
backend/src/agent/: __init__.py  agent.py  app.py  auth.py  database.py  guidelines.md  models.py  rag.py  schemas.py  tools.py  user_service.py  utils.py
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ActivityTimeline.tsx  AnalysisDashboard.tsx  ChatMessagesView.tsx  ExperienceManager.tsx  InputForm.tsx  ResumePreview.tsx  SwapReview.tsx  WelcomeScreen.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  select.tsx  tabs.tsx  textarea.tsx
frontend/src/types/: analysis.ts
